fix - Fixing a heading, projectCard, projects styles on mobile and tablet version

--- a/src/components/heading/style.css
+++ b/src/components/heading/style.css
@@ -2,7 +2,7 @@
   position: relative;
   display: block;
   margin-bottom: 3rem;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 76px;
   font-weight: 400;
   line-height: 82px;
@@ -56,7 +56,8 @@
 
 @media only screen and (max-width: 37.5em) {
   .heading-sec__main {
-    font-size: 5rem;
+    font-size: 43px;
+    line-height: 49px;
   }
 
   .heading-sec__main::after {
@@ -65,11 +66,5 @@
 
   .heading-sec__sub {
     font-size: 1rem;
-  }
-}
-
-@media only screen and (max-width: 27em) {
-  .heading-sec__main {
-    font-size: 4rem;
   }
 }
