--- a/src/sections/projects/style.css
+++ b/src/sections/projects/style.css
@@ -20,10 +20,6 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .projects {
-    padding: 14rem 0;
-  }
-
   .projects__filter {
     margin-bottom: 7rem;
   }
@@ -33,11 +29,13 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 56.25em) {
   .projects {
-    padding: 8rem 0;
+    padding: 7rem 0;
   }
+}
 
+@media screen and (max-width: 768px) {
   .projects__filter {
     margin-bottom: 5rem;
   }
@@ -49,6 +47,10 @@
 }
 
 @media screen and (max-width: 375px) {
+  .projects {
+    padding: 6rem 0;
+  }
+
   .projects__filter {
     margin-bottom: 3rem;
   }
